<resources>
    <string name="app_name">todolap</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- SPLASH SCREEN -->
    <string name="splash_title">TO DO</string>
    <string name="acceptPermission">Accept</string>
    <string name="declinePermission">Decline</string>
    <string name="main_today">Today</string>
    <string name="activities">To do</string>
    <string name="what_do_you_do">What do you need to do?</string>
    <string name="description">Put a description</string>

    <!-- Bottom menu main activity -->
    <string name="todo">ToDo</string>
    <string name="budget">Budget</string>
    <string name="settings">Settings</string>
    <string name="expenses">Expenses</string>
    <string name="timer">Timer</string>
    <string name="add_task_dialog_title">Add task</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="content_description_delete">delete task</string>
    <string name="content_description_add">add task</string>
    <string name="category_label">Category:</string>
    <string name="priority_label">Priority:</string>
    <string name="error_text_field">This field is required</string>


    <!-- Category Spinner -->

    <string-array name="priority_spinner">
        <item>High</item>
        <item>Middle</item>
        <item>Low</item>
    </string-array>

    <string-array name="category_spinner">
        <item>Default</item>
    </string-array>

</resources>
